Style: Updated <b> text color to soft lavender (#d8bfff) for light contrast in Experience section

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 </section>
 
 
-  <!-- ===== EXPERIENCE SECTION ===== -->
+ <!-- ===== EXPERIENCE SECTION ===== -->
 <section class="experience" id="experience">
   <h2 class="heading">My <span>Experience</span></h2>
   <div class="exp-container">
@@ -247,12 +247,12 @@
       <h3>Wipro Ltd | Client: Optum (UnitedHealth Group)</h3>
       <h4>Data Engineer | Mar 2024 – Present</h4>
       <ul>
-        <li>Ensured seamless execution of client processes by proactively identifying and resolving failures, reducing L2 team dependency and improving operational efficiency.</li>
-        <li>Maintained SLA compliance for response file deliveries, directly contributing to client satisfaction and service reliability.</li>
-        <li>Coordinated cross-functional updates and provided timely assistance to ensure readiness and issue resolution.</li>
-        <li>Collaborated effectively during critical production support scenarios, ensuring business continuity.</li>
-        <li>Explored product repositories for deeper insights into system architecture and data flow, improving support efficiency.</li>
-        <li>Proposed automation ideas to streamline workflows and enhance productivity.</li>
+        <li>Ensured seamless execution of client processes by proactively identifying and resolving failures, <b>reducing L2 team dependency</b> and <b>improving operational efficiency</b>.</li>
+        <li>Maintained <b>SLA compliance</b> for response file deliveries, directly contributing to <b>client satisfaction</b> and <b>service reliability</b>.</li>
+        <li>Coordinated <b>cross-functional updates</b> and provided timely assistance to ensure readiness and issue resolution.</li>
+        <li>Collaborated effectively during <b>critical production support</b> scenarios, ensuring <b>business continuity</b>.</li>
+        <li>Explored <b>product repositories</b> for deeper insights into system architecture and data flow, improving support efficiency.</li>
+        <li>Proposed <b>automation ideas</b> to streamline workflows and enhance productivity.</li>
       </ul>
     </div>
 
@@ -261,14 +261,14 @@
       <h3>Wipro Ltd | Client: Bharat Petroleum</h3>
       <h4>Data Engineer | Jun 2024 – Feb 2025</h4>
       <ul>
-        <li>Developed 40+ KPIs by extracting and transforming data from multiple sources to meet client requirements.</li>
-        <li>Created Databricks job workflows for automated data refresh and timely insights.</li>
-        <li>Utilized SQL and PySpark for scalable, accurate data processing and transformation.</li>
-        <li>Developed ADF data flows integrating Databricks and Spark for real-time processing.</li>
-        <li>Automated ADF pipeline configurations using dynamic parameters for flexible orchestration.</li>
-        <li>Integrated data between SharePoint and Microsoft Dataverse, maintaining historical data in Databricks.</li>
-        <li>Built Power BI dashboards and SQL reports for real-time insights and KPI tracking.</li>
-        <li>Optimized ADF data flow efficiency and reliability through performance tuning.</li>
+        <li>Developed <b>40+ KPIs</b> by extracting and transforming data from multiple sources to meet client requirements.</li>
+        <li>Created <b>Databricks job workflows</b> for automated data refresh and timely insights.</li>
+        <li>Utilized <b>SQL</b> and <b>PySpark</b> for scalable, accurate data processing and transformation.</li>
+        <li>Developed <b>ADF data flows</b> integrating <b>Databricks</b> and <b>Spark</b> for real-time processing.</li>
+        <li>Automated <b>ADF pipeline configurations</b> using <b>dynamic parameters</b> for flexible orchestration.</li>
+        <li>Integrated data between <b>SharePoint</b> and <b>Microsoft Dataverse</b>, maintaining historical data in <b>Databricks</b>.</li>
+        <li>Built <b>Power BI dashboards</b> and <b>SQL reports</b> for <b>real-time insights</b> and <b>KPI tracking</b>.</li>
+        <li>Optimized <b>ADF data flow efficiency</b> and reliability through <b>performance tuning</b>.</li>
       </ul>
     </div>
 
@@ -277,13 +277,13 @@
       <h3>Wipro Ltd | Client: Apple</h3>
       <h4>Cloud Engineer | Nov 2022 – Apr 2024</h4>
       <ul>
-        <li>Led cloud operations, improving data management efficiency by 120% through workflow automation.</li>
-        <li>Developed AWS Cloud Data Lakes, enhancing data integration and scalability.</li>
-        <li>Optimized ETL/ELT pipelines and implemented monitoring for proactive issue detection.</li>
-        <li>Deployed and managed AWS resources (S3, IAM, EKS) using CLI and CloudFormation.</li>
-        <li>Built CI/CD pipelines for automated infrastructure provisioning.</li>
-        <li>Created Splunk dashboards for log analytics, improving operational insights.</li>
-        <li>Mentored new team members and facilitated knowledge transfer sessions.</li>
+        <li>Led <b>cloud operations</b>, improving <b>data management efficiency by 120%</b> through <b>workflow automation</b>.</li>
+        <li>Developed <b>AWS Cloud Data Lakes</b>, enhancing <b>data integration</b> and <b>scalability</b>.</li>
+        <li>Optimized <b>ETL/ELT pipelines</b> and implemented <b>monitoring</b> for proactive issue detection.</li>
+        <li>Deployed and managed <b>AWS resources (S3, IAM, EKS)</b> using <b>CLI</b> and <b>CloudFormation</b>.</li>
+        <li>Built <b>CI/CD pipelines</b> for automated <b>infrastructure provisioning</b>.</li>
+        <li>Created <b>Splunk dashboards</b> for <b>log analytics</b>, improving <b>operational insights</b>.</li>
+        <li>Mentored <b>new team members</b> and facilitated <b>knowledge transfer sessions</b>.</li>
       </ul>
     </div>
 
@@ -292,16 +292,17 @@
       <h3>Wipro Ltd | Client: Apple</h3>
       <h4>Big Data Engineer | Aug 2022 – Oct 2022</h4>
       <ul>
-        <li>Managed large Hadoop clusters to optimize disk space and improve performance.</li>
-        <li>Analyzed Spark and Splunk logs to resolve job failures and minimize downtime.</li>
-        <li>Implemented advanced log monitoring strategies for faster root cause analysis.</li>
-        <li>Streamlined disk space management to improve cluster reliability and resource efficiency.</li>
-        <li>Maintained high system uptime during maintenance and patch activities.</li>
+        <li>Managed <b>large Hadoop clusters</b> to optimize <b>disk space</b> and improve performance.</li>
+        <li>Analyzed <b>Spark</b> and <b>Splunk logs</b> to resolve <b>job failures</b> and <b>minimize downtime</b>.</li>
+        <li>Implemented <b>advanced log monitoring strategies</b> for faster <b>root cause analysis</b>.</li>
+        <li>Streamlined <b>disk space management</b> to improve <b>cluster reliability</b> and <b>resource efficiency</b>.</li>
+        <li>Maintained <b>high system uptime</b> during <b>maintenance and patch activities</b>.</li>
       </ul>
     </div>
 
   </div>
 </section>
+
 
 
   <!-- ===== PROJECTS SECTION ===== -->
